--- a/index.html
+++ b/index.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Text-Editor</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="editor-container">
         <h2>Text Editor</h2>
+        <div class="content" contenteditable="true"></div>
         <div class="toolbar">
-            <button><b>B<b></b></button>
-            <button><i>I<i></b></button>
-            <button><u>U<b></u></button>
-            <button><s>S<b></s></button>
             <button>Left</button>
             <button>Center</button>
             <button>Right</button>
             <button>Justify</button>
             <button>Undo</button>
             <button>Redo</button>
+            
+            <button>Insert Image</button>
+          
             <input type="color" title="Text Color">
             <select>
                 <option value="1">Small</option>
@@ -28,11 +29,13 @@
                 <option value="5">Extra Large</option>
                 <option value="6">Huge</option>
             </select>
-            <button>Insert Image</button>
-            <button>Clear</button>
+            <button><b>B<b></b></button>
+            <button><i>I<i></b></button>
+            <button><u>U<b></u></button>
+            <button><s>S<b></s></button>
+                <button>Clear</button>
             <button>Save</button>
         </div>
-        <div contenteditable="true"></div>
     </div>
 </body>
 </html>
