--- a/index.html
+++ b/index.html
@@ -22,20 +22,17 @@
           
             <input type="color" title="Text Color">
             <select>
-                <option value="1">Small</option>
-                <option value="2">Medium</option>
-                <option value="3">Normal</option>
-                <option value="4">Large</option>
-                <option value="5">Extra Large</option>
-                <option value="6">Huge</option>
+                <option value="10">Small</option>
+                <option value="20">Medium</option>
+                <option value="30">Normal</option>
+                <option value="40">Large</option>
+                <option value="50">Extra Large</option>
+                <option value="60">Huge</option>
             </select>
-            <button><b>B<b></b></button>
-            <button><i>I<i></b></button>
-            <button><u>U<b></u></button>
-            <button><s>S<b></s></button>
-                <button>Clear</button>
+            <button>Clear</button>
             <button>Save</button>
         </div>
     </div>
+    <script src="scripts.js"></script>
 </body>
 </html>
